add skill reactjs and typescript

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <i class="bx bx-card"></i>
               </div>
               <h4><a href="">Front End</a></h4>
-              <p>VueJS</br>JQuery</br>Kendo Telerik UI</p>
+              <p>VueJS</br>ReactJS</br>JQuery</br>Kendo Telerik UI</p>
             </div>
           </div>
 
@@ -149,7 +149,7 @@
                 <i class="bx bx-code-curly"></i>
               </div>
               <h4><a href="">Languages</a></h4>
-              <p>C#</br>PHP</br>JavaScript</br>YAML(CI/CD)</br>HTML5/CSS</p>
+              <p>C#</br>PHP</br>JavaScript</br>TypeScript</br>YAML(CI/CD)</br>HTML5/CSS</p>
             </div>
           </div>
 
