--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
             </div>
             <h3 class="resume-title">Organization</h3>
             <div class="resume-item">
+              <h4>Head of Network Routing and Switching Division - CERC</h4>
+              <h5>Mar 2018 - Jun 2018</h5>
+              <p><em>Semarang, Central Java, Indonesia</em></p>
+            </div>
+            <div class="resume-item">
               <h4>Organization Manager - HIMASKOM</h4>
               <h5>2017 - 2018</h5>
               <p><em>Semarang, Central Java, Indonesia</em></p>
