add backend skill

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <i class="bx bx-code-block"></i>
               </div>
               <h4><a href="">Back End</a></h4>
-              <p>ASP .NET</br>ASP .NET Core</br>PHP CodeIgniter</p>
+              <p>ASP .NET / .NET Core</br>Node JS / Express JS / Prisma JS</br>PHP CodeIgniter</p>
             </div>
           </div>
 
